--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry excluding="main/" kind="src" path="src"/>
 	<classpathentry kind="src" path="src/main"/>
-	<classpathentry kind="lib" path="D:/Installed Programs/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="G:/Installers/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
